package com.mokylin;
import "MessageType.proto";
option java_package = "com.mokylin.bleach.protobuf";
option java_outer_classname = "DailyRewardMessage";

/**
 * 领取日常奖励
 */
message CGGetDailyReward {
	option (cg_message_type) = CG_GET_DAILY_REWARD;
	required int32 rewardIndex = 1;
}

///////////////////////////////////////////////////////////////////

/**
 * 每日奖励的信息
 */
message GCDailyRewardInfo {
	option (gc_message_type) = GC_DAILY_REWARD_INFO;
	//当前将要领取的奖励的次数，从0开始
	required int32 timesOfReward = 1;
	//当前月份
	required int32 currentMonth = 2;
	//英雄奖励在当前月份中的位置，从0开始
	required int32 indexOfHero = 3;
	//是否可以领取奖励
	required bool hasNewReward = 4;
}

/**
 * 每日奖励领取失败
 */
message GCGetDailyRewardFailed{
	option (gc_message_type) = GC_GET_DAILY_REWARD_FAILED;
}